# ravi-torch7-sys

./: CMakeLists.txt  init.lua
cmake/: FindLua.cmake
